25 урок, методы масива map

--- a/React_prosto/01_First_Project/react-kabzda-1/src/components/Dialogs/Dialogs.module.css
+++ b/React_prosto/01_First_Project/react-kabzda-1/src/components/Dialogs/Dialogs.module.css
@@ -13,10 +13,11 @@
     color: gold;
 }
 .dialog {
+  color: white;
 }
 .messages {
   padding: 10px;
 }
-.massage {
-
+.massage .messages{
+  color: white;
 }
